# rules-go-cgo-issue

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  out.json
